--- a/assets/css/style-form.css
+++ b/assets/css/style-form.css
@@ -34,7 +34,7 @@
 
 .container{
   width: 80vw;
-  height: 90vh;
+  height: auto;
   padding-top: 2.4vh;
   padding-bottom: 1rem;
   background: none;
@@ -83,9 +83,9 @@
 .area input{
   border-radius: 2vh;
   border: solid #00000077 0.1vh;
-  font-family: teko;
+  font-family: poppins;
   background: rgba(255, 255, 255, 0.61);
-  font-size: 100%;
+  font-size: 15px;
   color: #222222;
   height: 5vh;
   margin-bottom: 2vh;
@@ -145,7 +145,7 @@ textarea:focus, input:focus, select:focus{
   margin-left: 1vw;
   display: block;
   text-align: center;
-  font-size: 3vh;
+  font-size: 15px;
   color: #222222;
   margin-right: -0.1vw;
   border-radius: 2vh;
@@ -185,8 +185,8 @@ textarea:focus, input:focus, select:focus{
 .area select{
   width: 100px;
   height: 30px;
-  font-family: teko;
-  font-size: 15px;
+  font-family: poppins;
+  font-size: 1px;
   text-align: center;
   margin-right: 8px;
   background: rgba(255, 255, 255, 0.61);
@@ -195,8 +195,8 @@ textarea:focus, input:focus, select:focus{
 .area textarea{
   border-radius: 2vh;
   border: solid #00000077 0.1vh;
-  font-family: teko;
-  font-size: 90%;
+  font-family: poppins;
+  font-size: 15px;
   color: #222222;
   margin-bottom: 2vh;
   width: 60vw;
